# telomere_health_geography

./: .gitignore  pyproject.toml  requirements.txt  telomere_geography_health.ipynb  telomere_geography_health.pkl  telomere_geography_health.py  telomere_health.ipynb  telomere_health.py  telomere_new.py  testing_grounds.ipynb
input/: MDD Telomere Master File..xlsx  MDD Telomere Master File.csv  telomere_geography_health.csv  telomere_geography_health.csv.xlsx  telomere_health.csv  telomere_new.csv  telomere_new.xlsx
old/: telomere_geography.csv  telomere_geography.ipynb  telomere_geography.py
output/: prediction_report.csv
raw_data/: For-thesis-of-Telomere-Geographic-Team.xlsx  Master File_ Geographic Telomere - Coded Data.csv
telomere_geography_health/: cancer_optimized.ipynb  telomere_geography_health.ipynb
telomere_geography_health/input/: telomere_geography_health_3_18.csv
telomere_geography_health/output/: model_accuracy.csv
telomere_geography_health/output/feature_shapley/: allergy_shapley.csv  cancer_shapley.csv  cvd_shapley.csv  depression_anxiety_shapley.csv  diabetes_shapley.csv
telomere_geography_health/output/feature_variances_weights/: allergy_feature_vw.csv  (+4 more)
telomere_health/: telomere_health.ipynb  telomere_health_SEM.ipynb  telomere_health_health_current_working_version.ipynb  telomere_health_health_extended.ipynb  telomere_health_health_xgboost.ipynb  telomere_health_overhaul.ipynb
telomere_health/SEM/: telomere_health_SEM.ipynb
telomere_health/post_hoc/: post_hoc_analysis.ipynb
telomere_health/power_analysis/: power_analysis.ipynb
(+28 files in other folders)
