[project]
name = "telomere-health-geography"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scikit-posthocs>=0.11.4",
    "semopy>=2.3.11",
    "xgboost>=3.0.0",
]
